test/domains/bradc/assignConstDom2.good
modArrDom.chpl:11: error: passing const domain to function that modifies domains
